--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -30,7 +30,7 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 Q3.1 is located in a wide valley with a clear flood-plain cutting through the foothills lining the eastern flank of the Cachi valley, below Huanta. 
 
-The study site is situated where a rough track fords the river Huamanguilla-Iguian about 100 metres upstream from its confluence with the river Cachi. The measurements are best taken at this point and even if the river level is high, vehicles can provide access to both sides.
+The study site is situated where a rough track fords the river Huamanguilla-Iguian about 50 metres upstream from its confluence with the river Cachi. The measurements are best taken at this point and even if the river level is high, vehicles can provide access to both banks of the river.
 
 Access is beyond the settlement of Cangari. A track runs for 300 metres down to the river Cachi and then follows the right bank downstream for about 750 metres before dividing - take the track to the left for a further 100 metres to reach the site.
 
@@ -40,7 +40,7 @@ Access is beyond the settlement of Cangari. A track runs for 300 metres down to 
 
 Q3.1 se encuentra en un amplio valle con una clara llanura de inundación que atraviesa las estribaciones que bordean el flanco oriental del valle de Cachi, debajo de Huanta.
 
-El sitio de estudio está situado donde un camino accidentado vadea el río Huamanguilla-Iguian a unos 100 metros aguas arriba de su confluencia con el río Cachi. Las mediciones se realizan mejor en este punto e incluso si el nivel del río es alto, los vehículos pueden proporcionar acceso a ambos lados.
+El sitio de estudio está situado donde un camino accidentado vadea el río Huamanguilla-Iguian a unos 50 metros aguas arriba de su confluencia con el río Cachi. Las mediciones se realizan mejor en este punto e incluso si el nivel del río es alto, los vehículos pueden proporcionar acceso a ambos orillas del rio.
 
 El acceso se encuentra más allá del pueblito de Cangari. Una trocha desciende 300 metros hasta el río Cachi y luego sigue la orilla derecha río abajo durante unos 750 metros antes de dividirse: tome la trocha de la izquierda durante otros 100 metros para llegar al lugar.
 
@@ -53,33 +53,34 @@ El acceso se encuentra más allá del pueblito de Cangari. Una trocha desciende 
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q3.1                                 |       March / marzo 2023                                 |       June / junio 2023                        |
-|----------------------------------------------------------|----------------------------------------------------------|------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno                  |
-|     Date / Fecha:                                        |     20.3.23                                              |     20.6.23                                    |
-|     Time / Hora:                                         |     8.30                                                 |     9.45                                       |
-|     Width / Ancho (m)                                    |     10.20                                                |     8.40                                       |
-|     Depth / Profundidad (Av.) (m)                        |     0.22                                                 |     0.07                                       |
-|     CSA / Area traversal (Av.) (m²)                      |     2.24                                                 |     0.59                                       |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.78                                                 |     0.250                                      |
-|     Discharge / Caudal (Av.) (m³/s)                      |     1.741                                                |     0.147                                      |
-|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas                       |     Pebbles & cobbles / Piedritas y Piedras    |
-|     Temperature (Atmospheric) (°C)                       |     21.6                                                 |     28.0                                       |
-|     Temperature (Water / Agua) (°C)                      |     14.77                                                |     16.01                                      |
-|     Atmospheric pressure / presión (mbar)                |     809.2                                                |     808.3                                      |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.88                                                 |     6.73                                       |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     82.2                                                 |     82.6                                       |
-|     pH                                                   |     7.98                                                 |     8.07                                       |
-|     Conductivity / Conductividad (µS/cm)                 |     171                                                  |     795                                        |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     86                                                   |     397                                        |
-|     ORP (mV)                                             |     248.8                                                |     157.2                                      |
-|     Turbidity / Turbidez                                 |     Clear: slightly green / Transparente: poco verde     |     Turbid: Green / Turbidez: Verde            |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     81 (1.6N)                                            |     255 (1.6N)                                 |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     80                                                   |     223                                        |
+|     Site / Sitio: Q3.1                                   |     March / marzo 2023                               |     June / junio 2023                          |     November / noviembre 2023             |
+|----------------------------------------------------------|------------------------------------------------------|------------------------------------------------|-------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                          |     Austral Winter / Invierno                  |     Austral Winter / Invierno             |
+|     Date / Fecha:                                        |     20.3.23                                          |     20.6.23                                    |     23.11.23                              |
+|     Time / Hora:                                         |     8.30                                             |     9.45                                       |     11.00                                 |
+|     Width / Ancho (m)                                    |     10.20                                            |     8.40                                       |     1.82                                  |
+|     Depth / Profundidad (Av.) (m)                        |     0.22                                             |     0.07                                       |     0.103                                 |
+|     CSA / Area traversal (Av.) (m²)                      |     2.24                                             |     0.59                                       |     0.188                                 |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.78                                             |     0.250                                      |     0.127                                 |
+|     Discharge / Caudal (Av.) (m³/s)                      |     1.741                                            |     0.147                                      |     0.024                                 |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas                   |     Pebbles & cobbles / Piedritas y Piedras    |     Sand & Pebbles / Arena y Piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     21.6                                             |     28.0                                       |     20.8                                  |
+|     Temperature (Water / Agua) (°C)                      |     14.77                                            |     16.01                                      |     19.02                                 |
+|     Atmospheric pressure / presión (mbar)                |     809.2                                            |     808.3                                      |     764.6                                 |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.88                                             |     6.73                                       |     6.97                                  |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     82.2                                             |     82.6                                       |     102.2                                 |
+|     pH                                                   |     7.98                                             |     8.07                                       |     8.71                                  |
+|     Conductivity / Conductividad (µS/cm)                 |     171                                              |     795                                        |     196                                   |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     86                                               |     397                                        |     98                                    |
+|     ORP (mV)                                             |     248.8                                            |     157.2                                      |     152.9                                 |
+|     Turbidity / Turbidez                                 |     Clear: slightly green      Claro: poco verde     |     Turbid: Green / Turbidez: Verde            |     Clear / Transparente                  |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     81 (1.6N)                                        |     255 (1.6N)                                 |     350 (1.6N)                            |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     80                                               |     223                                        |     314                                   |
 
