--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -1,10 +1,10 @@
 ---
-title: Q3.3 - Upper Huamanguilla-Iguian - Yanacocha
+title: Q3.3 - Upper Huamanguilla-Iguian
 permalink: /docs/Q3_3/
 ---
 
 
-### Site Q3.3U March 2023 / Marzo 2023: Upper Huamanguilla-Iguian - Yanacocha
+### Site Q3.3U (March 2023 / marzo 2023): Upper Huamanguilla-Iguian - Yanacocha
 
 GPS: S12°958332, W74°129012. Elevation: 4060m asl.
 
@@ -15,12 +15,21 @@ Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (Joh
 Close up aerial view of study site / Vista aérea mas cerca del lugar del estudio (March 2023) (John Forrest)
 
 
-### Site Q3.3L June 2023 / Junio 2023: Upper Huamanguilla-Iguian - above Cora Cora
+### Site Q3.3L (June 2023 / junio 2023): Upper Huamanguilla-Iguian - above Cora Cora
 
 GPS: S12°985667, W74°178212. Elevation: 3225m asl.
 
 ![Q3.3](/assets/sites/Q3.3A.jpg)
 Aerial view of study site / Vista aérea del lugar del estudio (June 2023) (John Forrest)
+
+
+### Site Q3.3M (November 2023 / noviembre 2023): Upper Huamanguilla-Iguian - 
+
+GPS: S12°985667, W74°178212. Elevation: 3225m asl.
+
+![Q3.3](/assets/sites/Q3.3M.jpg)
+Aerial view of study site / Vista aérea del lugar del estudio (November 2023) (John Forrest)
+
 
 
 ### Q3.3U site visit March 2023 / Visita a Q3.3U en marzo 2023
@@ -47,40 +56,60 @@ The study site Q3.3B with the 'milky' coloured outflow from the left bank clearl
 View upstream from the study site of site Q3.3B with the 'milky' coloured outflow from the left bank clearly visible / Vista rio arriba desde el lugar del estudio hacia sitio Q3.3B con el flujo de salida de color "lechoso" de la orilla izquierda claramente visible (June 2023) (John Forrest)
 
 
+### Q3.3M site visit November 2023 / Visita a Q3.3M en noviembre 2023
+
+![Q3.3site](/assets/sites/Q3.3Msite.JPG)
+The study site / El lugar del estudio (November 2023) (John Forrest)
+
+![Q3.3upstream](/assets/sites/Q3.3Mupstream.jpg)
+View downstream from the study site / Vista rio abajo desde el lugar del estudio (November 2023) (John Forrest)
+
+![Q3.3downstream](/assets/sites/Q3.3Mdownstream.jpg)
+View upstream from the study site / Visita rio arriba del lugar del estudio (Nobvember 2023) (John Forrest)
+
+
 ### Site description
 
-The study site visited in March 2023is located in a wide, steep sided valley with a clear flood-plain apart from where there are small hills dotting the valley floor.
+The study site visited in March 2023 is located high in the upper valley. The valley is wide and steep sided, with a clear flood-plain apart from where there are small hills dotting the valley floor.
 
 The study site is situated about 1km below the Yanacocha dam and 250 metres from the road. The precise point is where an abandoned track running down from the road curves round a low hill and crosses the river between two small hills.
 
 The site is reached down an old, abandoned track running down from the road in to the valley towards the dam. NB. The upper section of this track is often waterlogged.
 
 
-The study site visited in June 2023 is located in a steep sided, heavily wooded valley, where the river emerges from the steepest slopes of the sierra Razuhuillca.
+The study site visited in June 2023 is located much lower down the valley just above the main agricultural (crops) zone. The site is located in a steep sided, heavily wooded valley, where the river emerges from the steepest slopes of the sierra Razuhuillca.
 
-The study site is situated about 3kms up the valley from the small settlement of Cora Cora, above Iguian, and about 50 metres upstream from the Iguian to Huamanguilla road bridge crossing the river.
+The site is situated about 3kms up the valley from the small settlement of Cora Cora, above Iguian, and about 50 metres upstream from the Iguian to Huamanguilla road bridge crossing the river.
 
 The site can be reached by traversing to the top of a field on the left bank.
 
+
+The study site visited in November 2023 is located between the previous two sites (Q3.3U & Q3.3L). The site is located amongst the steep slopes of the Sierra Razuhuillca covered with small pastures and woodland, where the little used upper Iguian to Huamanguilla road bridges the river.
+
+The study site is located immediately below the bridge.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
 
 ### Descripción del sitio
 
-El sitio de estudio visitado en marzo de 2023 está situado en un valle ancho y escarpado con una clara llanura de inundación, aparte de pequeñas colinas que salpican el fondo del valle.
+El sitio de estudio visitado en marzo de 2023 está situado en la parte alta del valle. El valle es ancho con laderas abruptas, y una clara llanura de inundación aparte de las pequeñas colinas que salpican el fondo del valle.
 
 El lugar de estudio visitado en marzo de 2023 está situado aproximadamente 1 km por debajo de la presa de Yanacocha y a 250 metros de la carretera. El punto preciso es donde una trocha abandonada que baja de la carretera se curva alrededor de una colina baja y cruza el río entre dos pequeñas colinas.
 
 Se llega al lugar por un viejo camino abandonado que baja desde la carretera hacia el valle en dirección a la presa. NB. La parte superior de este camino suele estar encharcada.
 
 
-El sitio de estudio visitado en junio de 2023 está ubicado en un valle de laderas empinadas y muy boscoso, donde el río emerge de las laderas más empinadas de la sierra Razuhuillca.
+El sitio de estudio visitado en junio de 2023 se encuentra mucho más abajo en el valle, justo por encima de la zona agrícola (cultivos) principal. El sitio se encuentra en un valle de laderas abruptas y muy arbolado, donde el río emerge de las laderas más abruptas de la sierra Razuhuillca.
 
-El lugar de estudio está situado a unos 3 km valle arriba del pequeño asentamiento de Cora Cora, por encima de Iguian, y a unos 50 metros río arriba del puente de la carretera de Iguian a Huamanguilla que cruza el río.
+El sitio está situado a unos 3 km valle arriba del pequeño asentamiento de Cora Cora, por encima de Iguian, y a unos 50 metros río arriba del puente de la carretera de Iguian a Huamanguilla que cruza el río.
 
 Se accede al sitio atravesando hasta la zona superior de un campo en la orilla izquierda.
 
+
+El sitio de estudio visitado en noviembre de 2023 está ubicado entre los dos sitios anteriores (Q3.3U & Q3.3L). El sitio se encuentra entre las laderas abruptas de la Sierra Razuhuillca cubiertas de pequeños pastos y bosques, donde el poco utilizado carreterra superior de Iguian a Huamanguilla cruza el río.
+
+El sitio de estudio se encuentra inmediatamente debajo del puente.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
 
@@ -98,26 +127,27 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q3.3                                 |   Q3.3U: March / marzo 2023           |  Q3.3L: June / junio 2023        |
-|----------------------------------------------------------|---------------------------------------|----------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno    |
-|     Date / Fecha:                                        |     23.3.23                           |     23.6.23                      |
-|     Time / Hora:                                         |     10.30                             |     10.00                        |
-|     Width / Ancho (m)                                    |     0.78                              |     1.47                         |
-|     Depth / Profundidad (Av.) (m)                        |     0.25                              |     0.10                         |
-|     CSA / Area traversal (Av.) (m²)                      |     0.20                              |     0.15                         |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.01                              |     0.077                        |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.040                             |     0.011                        |
-|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     Mainly rocks / Mas rocas     |
-|     Temperature (Atmospheric) (°C)                       |     9.9                               |     17.4                         |
-|     Temperature (Water / Agua) (°C)                      |     12.31                             |     8.12                         |
-|     Atmospheric pressure / presión (mbar)                |     674.7                             |     734.6                        |
-|     Dissolved oxygen / Oxigeno disuelto (mg/l)           |     6.82                              |     7.01                         |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     107.5                             |     87.1                         |
-|     pH                                                   |     7.46                              |     7.44                         |
-|     Conductivity / Conductividad (µS/cm)                 |     38                                |     45                           |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                |     23                           |
-|     ORP (mV)                                             |     177.5                             |     167.8                        |
-|     Turbidity / Turbidez                                 |     Clear / Transparente              |     Clear / Transparente     |
-|     Alkalinity/Alkalinidad (Titración) (mg/l CaCO₃)      |     28 (1.6N)                         |     37 (1.6N)                    |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     25                                |     34                           |
+|     Site / Sitio: Q3.3                                   |     Q3.3U - March / marzo 2023        |     Q3.3L - June / junio 2023    |     Q3.3M - November / noviembre 2023          |
+|----------------------------------------------------------|---------------------------------------|----------------------------------|------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno    |     Austral Winter / Invierno                  |
+|     Date / Fecha:                                        |     23.3.23                           |     23.6.23                      |     27.11.23                                   |
+|     Time / Hora:                                         |     10.30                             |     10.00                        |     9.45                                       |
+|     Width / Ancho (m)                                    |     0.78                              |     1.47                         |     6.16                                       |
+|     Depth / Profundidad (Av.) (m)                        |     0.25                              |     0.10                         |     0.096                                      |
+|     CSA / Area traversal (Av.) (m²)                      |     0.20                              |     0.15                         |     0.591                                      |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.01                              |     0.077                        |     0.529                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.040                             |     0.011                        |     0.313                                      |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     Mainly rocks / Mas rocas     |     Pebbles & cobbles / Piedritas y piedras    |
+|     Temperature (Atmospheric) (°C)                       |     9.9                               |     17.4                         |     17.6                                       |
+|     Temperature (Water / Agua) (°C)                      |     12.31                             |     8.12                         |     10.31                                      |
+|     Atmospheric pressure / presión (mbar)                |     674.7                             |     734.6                        |     701.6                                      |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.82                              |     7.01                         |     5.72                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     107.5                             |     87.1                         |     81.2                                       |
+|     pH                                                   |     7.46                              |     7.44                         |     7.98                                       |
+|     Conductivity / Conductividad (µS/cm)                 |     38                                |     45                           |     32                                         |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                |     23                           |     16                                         |
+|     ORP (mV)                                             |     177.5                             |     167.8                        |     136.9                                      |
+|     Turbidity / Turbidez                                 |     Clear  /  Transparente            |     Clear  /    Transparente     |     Clear  /    Transparente                   |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     28 (1.6N)                         |     37 (1.6N)                    |     38 (1.6N)                                  |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     25                                |     34                           |     27                                         |
+
