--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -35,13 +35,13 @@ Aerial view of study site / Vista aérea del lugar del estudio (November 2023) (
 ### Q3.3U site visit March 2023 / Visita a Q3.3U en marzo 2023
 
 ![Q3.3site](/assets/sites/Q3.3site1.JPG)
-The study site / El lugar del estudio (March 2023) (John Forrest)
+The study site / El sitio del estudio (March 2023) (John Forrest)
 
 ![Q3.3upstream](/assets/sites/Q3.3upstream.jpg)
-View downstream from the study site / Vista rio abajo desde el lugar del estudio (March 2023) (John Forrest)
+View downstream from the study site / Vista rio abajo desde el sitio del estudio (March 2023) (John Forrest)
 
 ![Q3.3downstream](/assets/sites/Q3.3downstream.jpg)
-View upstream from the study site / Visita rio arriba del lugar del estudio (March 2023) (John Forrest)
+View upstream from the study site / Visita rio arriba del sitio del estudio (March 2023) (John Forrest)
 
 
 ### Q3.3L site visit June 2023 / Visita a Q3.3L en junio 2023
@@ -59,31 +59,32 @@ View upstream from the study site of site Q3.3B with the 'milky' coloured outflo
 ### Q3.3M site visit November 2023 / Visita a Q3.3M en noviembre 2023
 
 ![Q3.3site](/assets/sites/Q3.3Msite.JPG)
-The study site / El lugar del estudio (November 2023) (John Forrest)
+The study site / El sitio del estudio (November 2023) (John Forrest)
 
 ![Q3.3upstream](/assets/sites/Q3.3Mupstream.jpg)
-View downstream from the study site / Vista rio abajo desde el lugar del estudio (November 2023) (John Forrest)
+View downstream from the study site / Vista rio abajo desde el sitio del estudio (November 2023) (John Forrest)
 
 ![Q3.3downstream](/assets/sites/Q3.3Mdownstream.jpg)
-View upstream from the study site / Visita rio arriba del lugar del estudio (Nobvember 2023) (John Forrest)
+View upstream from the study site / Visita rio arriba del sitio  del estudio (Nobvember 2023) (John Forrest)
 
 
 ### Site description
 
+### Q3.3U
 The study site visited in March 2023 is located high in the upper valley. The valley is wide and steep sided, with a clear flood-plain apart from where there are small hills dotting the valley floor.
 
 The study site is situated about 1km below the Yanacocha dam and 250 metres from the road. The precise point is where an abandoned track running down from the road curves round a low hill and crosses the river between two small hills.
 
 The site is reached down an old, abandoned track running down from the road in to the valley towards the dam. NB. The upper section of this track is often waterlogged.
 
-
+### Q3.3L
 The study site visited in June 2023 is located much lower down the valley just above the main agricultural (crops) zone. The site is located in a steep sided, heavily wooded valley, where the river emerges from the steepest slopes of the sierra Razuhuillca.
 
 The site is situated about 3kms up the valley from the small settlement of Cora Cora, above Iguian, and about 50 metres upstream from the Iguian to Huamanguilla road bridge crossing the river.
 
 The site can be reached by traversing to the top of a field on the left bank.
 
-
+### Q3.3M
 The study site visited in November 2023 is located between the previous two sites (Q3.3U & Q3.3L). The site is located amongst the steep slopes of the Sierra Razuhuillca covered with small pastures and woodland, where the little used upper Iguian to Huamanguilla road bridges the river.
 
 The study site is located immediately below the bridge.
