--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -61,10 +61,10 @@ View upstream from the study site of site Q3.3B with the 'milky' coloured outflo
 ![Q3.3site](/assets/sites/Q3.3Msite.JPG)
 The study site / El sitio del estudio (November 2023) (John Forrest)
 
-![Q3.3upstream](/assets/sites/Q3.3Mupstream.jpg)
+![Q3.3upstream](/assets/sites/Q3.3Mupstream.JPG)
 View downstream from the study site / Vista rio abajo desde el sitio del estudio (November 2023) (John Forrest)
 
-![Q3.3downstream](/assets/sites/Q3.3Mdownstream.jpg)
+![Q3.3downstream](/assets/sites/Q3.3Mdownstream.JPG)
 View upstream from the study site / Visita rio arriba del sitio  del estudio (Nobvember 2023) (John Forrest)
 
 
